<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_geometry"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.reedschrier.calculator.Geometry">

    <TextView
        android:id="@+id/volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        android:text="@string/volume" />

    <Button
        android:id="@+id/sphere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/volume"
        android:layout_margin="4dp"
        android:backgroundTint="@android:color/background_light"
        android:textColor="@color/colorAccent"
        android:text="@string/sphere"
        android:onClick="sphere"/>

    <Button
        android:id="@+id/cone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/volume"
        android:layout_toRightOf="@id/sphere"
        android:layout_toEndOf="@id/sphere"
        android:layout_margin="4dp"
        android:backgroundTint="@android:color/background_light"
        android:textColor="@color/colorAccent"
        android:text="@string/cone"
        android:onClick="cone"/>

    <Button
        android:id="@+id/cylinder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/volume"
        android:layout_toRightOf="@id/cone"
        android:layout_toEndOf="@id/cone"
        android:layout_margin="4dp"
        android:backgroundTint="@android:color/background_light"
        android:textColor="@color/colorAccent"
        android:text="@string/cylinder"
        android:onClick="cylinder"/>

</RelativeLayout>
